# gears

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  main.d.ts  main_bg.wasm  main_bg.wasm.d.ts  profile.sh  run-wasm.sh
.github/workflows/: rust.yml
examples/: Cargo.toml  debug.rs  debug2.rs
examples/ecs/res/: frag.glsl  vert.glsl
examples/ecs/src/: ecs.rs  main.rs  shader.rs
examples/experimental/src/: main.rs
examples/gear/: README.md  main.rs  run-wasm.sh
examples/gear/pkg/: main_bg.wasm
examples/gear/res/: default.frag.glsl  default.vert.glsl
examples/gear/src/: main.rs  shader.rs
examples/main/: Cargo.toml  README.md  main.rs
examples/main/pkg/: main.d.ts  main.js  main_bg.wasm  main_bg.wasm.d.ts
examples/main/res/: default.vert.glsl  gears.mtl
examples/voxel/: cubes.rs  main.rs  marching_cubes.rs
examples/voxel/res/: default.frag.glsl  default.geom.glsl  default.vert.glsl
examples/voxel/src/: cubes.rs  main.rs  marching_cubes.rs  mcubes.rs  shader.rs
gears/: Cargo.toml
gears-pipeline/: Cargo.toml  README.md
gears-pipeline/res/: _include_test.glsl  _test.glsl  rand.glsl
gears-pipeline/src/: compiler.rs  derive.rs  lib.rs  module.rs  modules.rs  pipeline.rs  ubo.rs
gears-pipeline/tests/: macro_test.rs  test.glsl
gears-spirv/: Cargo.toml
gears-spirv/src/: compiler.rs  lib.rs  parse.rs
gears-traits/: Cargo.toml
gears-traits/src/: lib.rs
gears/res/: default.frag.glsl  default.glsl  default.vert.glsl
gears/src/: context.rs  debug.rs  format.rs  frame.rs  game_loop.rs  input_state.rs  io.rs  lib.rs  loops.rs  renderer.rs  report.rs
gears/src/context/: gpu.rs  mod.rs
gears/src/context/gpu/: any.rs  mod.rs  score.rs  suitable.rs  unsuitable.rs
gears/src/io/: cursor_controller.rs  fpcam.rs  input_state.rs  mod.rs
gears/src/loops/: frame.rs  update.rs
gears/src/renderer/: batch.rs  buffer.rs  device.rs  mod.rs  object.rs  pipeline.rs  query.rs  queue.rs  render_pass.rs  simple_renderer.rs  surface.rs  swapchain.rs
gears/src/renderer/batch/: dense.rs  shape.rs  sparse.rs
gears/src/renderer/buffer/: debug.rs  image.rs  index.rs  indirect.rs  re_alloc.rs  simple.rs  stage.rs  uniform.rs  vertex.rs
gears/src/renderer/pipeline/: compute.rs  factory.rs  graphics.rs  vertex.rs
gears/src/renderer/pipeline/graphics/: draw.rs
gears/src/renderer/shader/: default.glsl  frag.glsl  frag.glsl.spv  vert.glsl  vert.glsl.spv
pkg/: index.html  main.js
src/: lib.rs  log.rs  log.rs-bk  renderer.rs
src/renderer/: pipeline.rs
src/renderer/shader/: .gitignore  compile.sh
