[package]
name = "gears"
version = "0.1.0"
authors = ["Overpeek <overpeek.fin@gmail.com>"]
edition = "2018"
exclude = ["examples/*"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "examples/main/main.rs"

[features]
default = []
gl = ["gfx-backend-gl"]
vulkan = ["gfx-backend-vulkan"]
unstable = []

[dependencies]
colored = "2.0.0"
chrono = "0.4.19"
winit = { version = "0.24.0", features = ["web-sys"] }
cgmath = "0.18.0"
image = "0.23.14"
gfx-hal = "0.7.0"
gfx-auxil = "0.8.0"
gfx-backend-empty = "0.7.0"

[dependencies.gfx-backend-vulkan]
package = "gfx-backend-vulkan"
version = "0.7.0"
optional = true

[target.'cfg(all(unix, not(target_os = "ios"), not(target_os = "macos"), not(target_os = "android")))'.dependencies.gfx-backend-gl]
package = "gfx-backend-gl"
version = "0.7.0"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.71"
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"

[dev-dependencies]
wasm-bindgen = "0.2.71"
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"

[target.'cfg(all(target_arch = "wasm32"))'.dependencies.gfx-backend-gl]
package = "gfx-backend-gl"
version = "0.7.0"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
package = "web-sys"
version = "0.3.48"
features = [ "console", "Document", "Element", "HtmlElement", "Node", "Window" ]