[package]
name = "gears"
version = "0.1.0"
authors = ["Overpeek <overpeek.fin@gmail.com>"]
edition = "2018"
exclude = ["examples/*"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["examples/*"]

[features]
default = []
gl = ["gfx-backend-gl"]
vulkan = ["gfx-backend-vulkan"]
unstable = []

[dependencies]
log = "0.4"
colored = "2.0.0"
instant = "0.1.9"
cgmath = "0.18.0"
winit = { version = "0.24.0", features = ["web-sys"] }
gfx-hal = "0.7.0"
gfx-auxil = "0.8.0"
gfx-backend-empty = "0.7.0"

[build-dependencies]
shaderc = "0.7.1"

[dependencies.gfx-backend-vulkan]
package = "gfx-backend-vulkan"
version = "0.7.0"
optional = true

[target.'cfg(all(unix, not(target_os = "ios"), not(target_os = "macos"), not(target_os = "android")))'.dependencies.gfx-backend-gl]
package = "gfx-backend-gl"
version = "0.7.0"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.71"
console_error_panic_hook = "0.1.6"
console_log = { version = "0.2.0", features = ["color"]}
web-sys = { version = "0.3.48", features = [ "console", "Document", "Element", "HtmlElement", "Node", "Window" ] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.8"

[target.'cfg(all(target_arch = "wasm32"))'.dependencies.gfx-backend-gl]
package = "gfx-backend-gl"
version = "0.7.0"
optional = true