[package]
name = "gears"
version = "0.1.0"
authors = ["Overpeek <overpeek.fin@gmail.com>"]
edition = "2018"
exclude = ["examples/*"]
build = "build.rs"

[build-dependencies]
shaderc = "0.7.1"

[workspace]
members = ["examples/*"]

[features]
default = []
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl"]
dx11 = ["gfx-backend-dx11"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]
unstable = []

[dependencies]
log = "0.4"
colored = "2.0.0"
instant = "0.1.9"
cgmath = "0.18.0"
winit = { version = "0.24.0", features = ["web-sys"] }
gfx-hal = "0.7.0"
gfx-auxil = "0.8.0"
gfx-backend-empty = "0.7.0"
gfx-backend-vulkan = { version = "0.7.0", optional = true }
vulkano-shaders = "0.21.0"

# any gl

[target.'cfg(all(unix, not(target_os = "ios"), not(target_os = "macos"), not(target_os = "android")))'.dependencies]
gfx-backend-gl = { version = "0.7.0", optional = true }

# wasm

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.71"
console_error_panic_hook = "0.1.6"
console_log = { version = "0.2.0", features = ["color"]}
web-sys = { version = "0.3.48", features = [ "console", "Document", "Element", "HtmlElement", "Node", "Window" ] }
gfx-backend-gl = { version = "0.7.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.8"

# apple

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
gfx-backend-metal = { version = "0.7.0", optional = true }

# windows

[target.'cfg(windows)'.dependencies]
gfx-backend-dx11 = { version = "0.7.0", optional = true }
gfx-backend-dx12 = { version = "0.7.0", optional = true }