[package]
name = "gears-examples"
version = "0.1.0"
authors = ["Overpeek <overpeek.fin@gmail.com>"]
edition = "2018"

[[bin]]
name = "ecs"
path = "ecs/src/main.rs"

[[bin]]
name = "gear"
path = "gear/src/main.rs"

[[bin]]
name = "voxel"
path = "voxel/src/main.rs"

[dependencies]
# noise = "0.7.0"
# rayon = "1.5.0"

simdnoise = "~3.1"
log = "~0.4"
rand = "~0.8"
env_logger = "~0.9"
specs = { version = "~0.17", features = ["parallel", "derive"] }
gears = { path = "../gears", features = ["validation_panic"] }
paste = "1.0.6"
smallvec = "1.8.0"
bytemuck = "1.9.1"

vulkano = "0.29.0"
vulkano-shaders = "0.29.0"
vulkano-win = "0.29.0"
# vulkano = { git = "https://github.com/vulkano-rs/vulkano" }
# vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano", features = [
# 	"shaderc-build-from-source",
# ] }
# vulkano-win = { git = "https://github.com/vulkano-rs/vulkano" }
# vulkano = { git = "https://github.com/Overpeek/vulkano" }
# vulkano-shaders = { git = "https://github.com/Overpeek/vulkano" }
# vulkano-win = { git = "https://github.com/Overpeek/vulkano" }
