[package]
name = "gears-pipeline"
version = "0.1.0"
authors = ["Overpeek <overpeek.fin@gmail.com>"]
edition = "2018"
description = "Macro to generate SPIRV from GLSL at compiletime"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "~1.0"
syn = "~1.0"
quote = "~1.0"
shaderc = "~0.7"
regex = "~1.5"
gears-spirv = { path = "../gears-spirv" }

[dev-dependencies]
gears = { path = "../gears" }
