[package]
name = "gears-spirv"
version = "0.1.0"
authors = ["Overpeek <overpeek.fin@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shaderc = "~0.7"
regex = "~1.5"
proc-macro2 = "~1.0"
syn = "~1.0"
quote = "~1.0"
