[package]
name = "gears"
version = "0.1.0"
authors = ["Overpeek <overpeek.fin@gmail.com>"]
edition = "2018"
description = "WIP A simple 2D Game Engine Applicable in Rust aka GEARS"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "short_namespaces" ]
short_namespaces = []
validation_panic = []
runtime_shaders = [ "gears-spirv" ]

[dependencies]
log = "~0.4"
colored = "~2.0"
glam = "~0.17"
wavefront_obj = "~10.0"
parking_lot = "~0.11"
bitflags = "~1.2"
memoffset = "~0.6"
winit = { version = "~0.25", features = ["web-sys"] }
ash = "~0.32"
ash-window = "~0.6"
raw-window-handle = "~0.3"
static_assertions = "~1.1"
gears-pipeline = { path = "../gears-pipeline" }

[dependencies.gears-spirv]
path = "../gears-spirv"
optional = true