[package]
name = "gears"
version = "0.1.0"
authors = ["Overpeek <overpeek.fin@gmail.com>"]
edition = "2018"
description = "WIP A simple 2D Game Engine Applicable in Rust aka GEARS"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
validation_panic = []

[dependencies]
log = "~0.4"
colored = "~2.0"
glam = "~0.18"
wavefront_obj = "~10.0"
parking_lot = "~0.11"
bitflags = "~1.3"
memoffset = "~0.6"
bytesize = "~1.1"
winit = { version = "~0.25", features = ["web-sys"] }
tokio = { version = "~1.11", features = ["full"] }
async-trait = "~0.1"
vulkano = { git = "https://github.com/Overpeek/vulkano" }
vulkano-shaders = { git = "https://github.com/Overpeek/vulkano" }
vulkano-win = { git = "https://github.com/Overpeek/vulkano" }
static_assertions = "~1.1"
anyhow = "~1.0"
gears-pipeline = { path = "../gears-pipeline" }

[dependencies.gears-spirv]
path = "../gears-spirv"
optional = true
