[package]
name = "gears"
version = "0.1.0"
authors = ["Overpeek <overpeek.fin@gmail.com>"]
edition = "2018"
description = "WIP A simple 2D Game Engine Applicable in Rust aka GEARS"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
validation_panic = []

[dependencies]
log = "~0.4"
colored = "~2.0"
glam = "0.20.2"
wavefront_obj = "~10.0"
parking_lot = "0.12.0"
bitflags = "~1.3"
memoffset = "~0.6"
bytesize = "~1.1"
winit = { version = "0.26.1" }
async-trait = "~0.1"
static_assertions = "~1.1"
anyhow = "~1.0"
gears-pipeline = { path = "../gears-pipeline" }
gilrs = "0.8.2"
smallvec = "1.8.0"

# vulkano = "0.28.0"
# vulkano-shaders = "0.28.0"
# vulkano-win = "0.28.0"
vulkano = { git = "https://github.com/vulkano-rs/vulkano" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano", features = [
	"shaderc-build-from-source",
] }
vulkano-win = { git = "https://github.com/vulkano-rs/vulkano" }
# vulkano = { git = "https://github.com/Overpeek/vulkano" }
# vulkano-shaders = { git = "https://github.com/Overpeek/vulkano" }
# vulkano-win = { git = "https://github.com/Overpeek/vulkano" }

[dependencies.gears-spirv]
path = "../gears-spirv"
optional = true
